# Tavana

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.gateway  Dockerfile.local  Dockerfile.worker  LICENSE  NEXT_STEPS.md  QUICK_REFERENCE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_SUMMARY.md  deploy.sh  docker-compose.dev.yaml  docker-compose.yaml  init.sql  monitor-release.sh  plan.md  prometheus.yml  test-deployment.sh
.github/workflows/: ci.yaml  release.yaml  security.yaml
clients/dbeaver/: README.md
clients/tableau/: README.md  tavana.properties  tavana.tdc
crates/tavana-catalog/: Cargo.toml
crates/tavana-catalog/src/: db.rs  grpc_api.rs  main.rs  unity_api.rs
crates/tavana-common/: Cargo.toml  build.rs
crates/tavana-common/src/: auth.rs  config.rs  error.rs  k8s.rs  lib.rs  tls.rs
crates/tavana-common/src/proto/: mod.rs
crates/tavana-gateway/: Cargo.toml
crates/tavana-gateway/src/: adaptive_queue.rs  auth.rs  cursors.rs  data_sizer.rs  errors.rs  flight.rs  flight_sql.rs  http_api.rs  k8s_client.rs  main.rs  metrics.rs  pg_compat.rs  pg_wire.rs  query.rs  query_cache.rs  query_queue.rs  query_router.rs  redis_queue.rs  redis_queue_stub.rs  result_spooler.rs  smart_scaler.rs  telemetry.rs  tenant_pool.rs  tls_config.rs  worker_client.rs  worker_pool.rs
crates/tavana-gateway/src/adaptive/: config.rs  controller.rs  event_calendar.rs  history.rs  hpa_manager.rs  load_metrics.rs  mod.rs  time_patterns.rs
crates/tavana-gateway/src/auth/: config.rs  gateway.rs  identity.rs  mod.rs
crates/tavana-gateway/src/auth/providers/: mod.rs  passthrough.rs  separ.rs  static_keys.rs
crates/tavana-gateway/src/auth/tokens/: api_key.rs  jwt.rs  mod.rs
crates/tavana-gateway/src/pg_wire/: arrow_encoder.rs  auth.rs  backpressure.rs  config.rs  connection.rs  mod.rs  server.rs
crates/tavana-gateway/src/pg_wire/handler/: auth.rs  config.rs  connection.rs  core.rs  execution.rs  extended.rs  messages.rs  mod.rs  portal.rs  query_loop.rs  utils.rs
crates/tavana-gateway/src/pg_wire/protocol/: constants.rs  messages.rs  mod.rs  types.rs
crates/tavana-gateway/src/pg_wire/query/: manipulation.rs  mod.rs  pg_commands.rs
crates/tavana-metering/: Cargo.toml
crates/tavana-metering/src/: main.rs
crates/tavana-operator/: Cargo.toml
crates/tavana-operator/src/: crd.rs  estimation.rs  main.rs  reconciler.rs
crates/tavana-worker/: Cargo.toml
crates/tavana-worker/src/: cursor_manager.rs  executor.rs  grpc.rs  main.rs
docs/: CUSTOMER-DEPLOYMENT-GUIDE.md  DEPLOYMENT-ROADMAP.md  authentication.md  critical-analysis-and-improvements.md  query-flow-sequence-diagram.md  true-streaming-architecture.md
example-deployment/: ingress.yaml  namespace.yaml  worker-deployment.yaml
examples/: tavana_client_examples.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: card.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: BillingPage.tsx  CatalogPage.tsx  Dashboard.tsx  QueryPage.tsx  SettingsPage.tsx
gitops-template/: README.md
gitops-template/apps/: monitoring.yaml  tavana.yaml
gitops-template/values/: overrides.yaml
helm/tavana/: Chart.yaml  README.md  values-azure.example.yaml  values-azure.yaml  values-customer-example.yaml  values-databricks.yaml  values-example-dev.yaml  values-nokia-dev.yaml  values-separ.yaml  values.yaml
helm/tavana/dashboards/: resource-dashboard.json
helm/tavana/templates/: _helpers.tpl  catalog-deployment.yaml  configmap.yaml  gateway-deployment.yaml  gateway-loadbalancer.yaml  hpa.yaml  ingress.yaml  network-tuner.yaml  networkpolicy.yaml  operator-deployment.yaml  pdb.yaml  rbac.yaml  vpa.yaml  worker-deployment.yaml
k8s/: kind-config.yaml
k8s/base/: configmaps.yaml  gateway-deployment.yaml  kustomization.yaml  minio.yaml  namespace.yaml  operator-deployment.yaml  postgres-init-configmap.yaml  postgres.yaml  secrets.yaml  services.yaml  worker-deployment.yaml
k8s/crds/: duckdbquery-crd.yaml
k8s/kind/: cluster-config.yaml
k8s/manifests/: adaptive-config.yaml  configmap.yaml  crd-duckdbquery.yaml  gateway-rbac.yaml  gateway.yaml  hpa.yaml  minio.yaml  operator.yaml  redis.yaml  tenant-pool-template.yaml  vpa.yaml  worker.yaml
k8s/monitoring/: dashboard-configmap.yaml  dashboard.json  grafana-dashboard-adaptive-queue.json  grafana-dashboards-cm.yaml  grafana.yaml  improved-dashboard.json  prometheus.yaml  tavana-complete-dashboard.json
k8s/monitoring/grafana-provisioning/dashboards/: dashboard.yaml
k8s/monitoring/grafana-provisioning/datasources/: datasource.yaml
lakekeeper/examples/minimal/: docker-compose.yaml
nokia-deployment/: ingress.yaml  namespace.yaml  worker-deployment.yaml
proto/tavana/v1/: catalog.proto  common.proto  query.proto
scripts/: customer-deploy.sh  deploy-k8s.sh  deploy-kind.sh  deploy-monitoring.sh  deploy-to-aks.sh  export_for_tableau.sh  export_to_duckdb.sh  generate_sample_data.py  generate_tpch_data.sh  port-forward.sh  prepare-offline-package.sh  recover-services.sh  stress-test.sh  upload_sample_data.sh
terraform/: README.md
terraform/azure/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/azure/examples/enterprise/: main.tf  terraform.tfvars.example  variables.tf
terraform/azure/examples/quickstart/: main.tf  terraform.tfvars.example  variables.tf
