[package]
name = "tavana-catalog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tavana-catalog"
path = "src/main.rs"

[dependencies]
tavana-common = { path = "../tavana-common" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# Web framework (for Unity Catalog REST API)
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database
sqlx = { workspace = true }

# Object storage (for reading table metadata)
object_store = { workspace = true }
parquet = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }

# Config
clap = { workspace = true }
dotenvy = { workspace = true }

