[package]
name = "tavana-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tavana-gateway"
path = "src/main.rs"

[dependencies]
tavana-common = { path = "../tavana-common" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Protocols
tonic = { workspace = true }
prost = { workspace = true }
arrow = { workspace = true }
arrow-flight = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
arrow-ipc = { workspace = true }
pgwire = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Query parsing
sqlparser = { workspace = true }

# Auth
openidconnect = { workspace = true }
jsonwebtoken = { workspace = true }

# TLS
rustls = { workspace = true, features = ["ring"] }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
blake3 = { workspace = true }
once_cell = "1.19"

# Config
clap = { workspace = true }
dotenvy = { workspace = true }

# Query routing
regex = "1.10"

# S3 and data formats for real size estimation
aws-sdk-s3 = "1.75"
aws-config = "1.6"
parquet = { workspace = true }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-stream = "0.1"

# Kubernetes (for creating DuckDBQuery CRs)
kube = { workspace = true, features = ["rustls-tls", "derive"] }
k8s-openapi = { workspace = true }

# HTTP client for Prometheus queries
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# HTTP types for K8s API requests
http = "1.1"

# Socket options (TCP keepalive)
socket2 = { version = "0.5", features = ["all"] }

# MD5 authentication for PostgreSQL wire protocol
md5 = "0.7"
rand = { workspace = true }

# Fast number formatting (used in PG wire text encoding hot path)
itoa = "1"
ryu = "1"

# Parallel encoding for PG wire (multi-core RecordBatch → DataRow)
rayon = "1"

# Base64 encoding for Flight SQL auth
base64 = { workspace = true }

