[package]
name = "tavana-operator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tavana-operator"
path = "src/main.rs"

[dependencies]
tavana-common = { path = "../tavana-common" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Kubernetes
kube = { workspace = true, features = ["rustls-tls"] }
k8s-openapi = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# Object storage (for metadata reading)
object_store = { workspace = true }
parquet = { workspace = true }

# Query parsing
sqlparser = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
schemars = "0.8"

# Config
clap = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

