[package]
name = "tavana-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tavana-worker"
path = "src/main.rs"

[dependencies]
tavana-common = { path = "../tavana-common" }

# Async runtime
tokio = { workspace = true }
tokio-stream = "0.1"
async-trait = { workspace = true }
futures = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# Arrow (use workspace versions for compatibility with DuckDB's bundled Arrow)
arrow = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
arrow-ipc = { workspace = true }
arrow-flight = { workspace = true }

# Note: Arrow 56 matches DuckDB's bundled Arrow version

# DuckDB
duckdb = { workspace = true }

# Object storage
object_store = { workspace = true }
parquet = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }

# Config
clap = { workspace = true }
dotenvy = { workspace = true }

# System
num_cpus = "1.16"

# HTTP client for Azure token exchange
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Cursor manager dependencies
dashmap = { workspace = true }
parking_lot = { workspace = true }
hex = { workspace = true }

# Query pattern matching for Delta cache
regex = "1.10"

# Hash generation for Delta table aliases
blake3 = { workspace = true }

